--- a/Image_gen.ipynb
+++ b/Image_gen.ipynb
@@ -41,6 +41,9 @@
         "    EulerAncestralDiscreteScheduler\n",
         ")\n",
         "\n",
+        "#  STEP 3: Hugging Face Token (Required for Diffusers)\n",
+        "HUGGING_FACE_TOKEN = \"\"  # Replace if expired\n",
+        "HUGGING_FACE_TOKEN = \"\"  # Replace if expired",
       ],
       "metadata": {
         "id": "38RadPx0HxqW"
