--- a/Image_gen.ipynb
+++ b/Image_gen.ipynb
@@ -143,7 +143,7 @@
       "source": [
         "# -------- GRADIO INTERFACE ----------\n",
         "with gr.Blocks() as app:\n",
-        "    gr.Markdown(\"## 🎨 Ultra-HD AI Image Generator\")\n",
+        "    gr.Markdown(\" Ultra-HD AI Image Generator\")\n",
         "    gr.Markdown(\"High quality Stable Diffusion based image creation system\")\n",
         "\n",
         "    prompt_box = gr.Textbox(\n",
