--- a/Image_gen.ipynb
+++ b/Image_gen.ipynb
@@ -41,8 +41,8 @@
         "    EulerAncestralDiscreteScheduler\n",
         ")\n",
         "\n",
-        "#  STEP 3: Hugging Face Token (Required for Diffusers)\n",
-        "HUGGING_FACE_TOKEN = \"\"  # Replace if expired\n"
+        "#  STEP 3: Hugging Face Token (Required for Diffusers)\n"
+       
        
       ],
       "metadata": {
